// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hearing should render empty data correctly 1`] = `
<div
  className="sc-EHOje jyflZT"
>
  <h3
    className="sc-htpNat jszPot"
  >
    Report details
  </h3>
  <div
    className="sc-bdVaJa gkOpjT"
  >
    <div
      className="sc-bwzfXH iPnSaj"
    >
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH LjyEw"
        >
          <strong
            className="label"
          >
            Incident date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
        <div
          className="sc-bwzfXH LjyEw"
        >
          <strong
            className="label"
          >
            Type
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
        <div
          className="sc-bwzfXH LjyEw"
        >
          <strong
            className="label"
          >
            Location
          </strong>
          <p
            className="sc-ifAKCX isyHfT"
          >
            --
          </p>
          <p>
            --
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH iXLolC"
        >
          <strong
            className="label"
          >
            Detail
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
    </div>
    <div
      className="sc-bwzfXH jqxiAx"
    >
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH iIsRPd"
        >
          <strong
            className="label"
          >
            Report number
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
        <div
          className="sc-bwzfXH iIsRPd"
        >
          <strong
            className="label"
          >
            Reported by
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH iIsRPd"
        >
          <strong
            className="label"
          >
            Report date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hearing should render present detail correctly 1`] = `
<div
  className="sc-EHOje jyflZT"
>
  <h3
    className="sc-htpNat jszPot"
  >
    Report details
  </h3>
  <div
    className="sc-bdVaJa gkOpjT"
  >
    <div
      className="sc-bwzfXH iPnSaj"
    >
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH LjyEw"
        >
          <strong
            className="label"
          >
            Incident date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            12/04/2014 - 12:32
          </p>
        </div>
        <div
          className="sc-bwzfXH LjyEw"
        >
          <strong
            className="label"
          >
            Type
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            General
          </p>
        </div>
        <div
          className="sc-bwzfXH LjyEw"
        >
          <strong
            className="label"
          >
            Location
          </strong>
          <p
            className="sc-ifAKCX isyHfT"
          >
            WING-A
          </p>
          <p>
            Moorland HMP
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH iXLolC"
        >
          <strong
            className="label"
          >
            Detail
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            A crime occurred
          </p>
        </div>
      </div>
    </div>
    <div
      className="sc-bwzfXH jqxiAx"
    >
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH iIsRPd"
        >
          <strong
            className="label"
          >
            Report number
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            123456
          </p>
        </div>
        <div
          className="sc-bwzfXH iIsRPd"
        >
          <strong
            className="label"
          >
            Reported by
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            Jo Smith
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa gkOpjT"
      >
        <div
          className="sc-bwzfXH iIsRPd"
        >
          <strong
            className="label"
          >
            Report date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
